This is the new gateway configuration that exclude jwt authentication filter and custom route config in each own file