@@ -1,14 +1,10 @@
 package com.hashjosh.gateway.config;
 
 import lombok.RequiredArgsConstructor;
-import org.springframework.cloud.gateway.route.RouteLocator;
-import org.springframework.cloud.gateway.route.builder.GatewayFilterSpec;
-import org.springframework.cloud.gateway.route.builder.RouteLocatorBuilder;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
-import org.springframework.security.config.annotation.web.reactive.EnableWebFluxSecurity;
-import org.springframework.security.config.web.server.SecurityWebFiltersOrder;
 import org.springframework.security.config.web.server.ServerHttpSecurity;
 import org.springframework.security.web.server.SecurityWebFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
@@ -19,65 +15,41 @@ import java.util.Arrays;
 import java.util.List;
 
 @Configuration
-@EnableWebFluxSecurity
 @RequiredArgsConstructor
 public class GatewaySecurityConfig {
 
-    private final JwtAuthenticationFilter jwtAuthenticationFilter;
-
     @Bean
     public SecurityWebFilterChain springSecurityFilterChain(ServerHttpSecurity http) {
-        return http
+        http
                 .csrf(ServerHttpSecurity.CsrfSpec::disable)
                 .formLogin(ServerHttpSecurity.FormLoginSpec::disable)
                 .httpBasic(ServerHttpSecurity.HttpBasicSpec::disable)
                 .authorizeExchange(exchanges -> exchanges
-                        // ✅ WebSocket handshake and info endpoints must always be open
-                        .pathMatchers("/ws/**", "/ws", "/ws/info", "/ws/info/**").permitAll()
-                        // ✅ Allow preflight
+                        // SockJS & raw WS handshake endpoints — permit all (gateway will forward)
+                        .pathMatchers("/ws", "/ws/**", "/ws/info", "/ws/info/**").permitAll()
                         .pathMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-                        // ✅ Auth routes
-                        .pathMatchers(
-                                "/api/v1/farmer/auth/**",
-                                "/api/v1/agriculture/auth/**",
-                                "/api/v1/pcic/auth/**"
-                        ).permitAll()
-                        // 🔒 Everything else requires authentication
                         .anyExchange().authenticated()
-                )
-                // ✅ Add our JWT filter after the authentication point
-                .addFilterAt(jwtAuthenticationFilter, SecurityWebFiltersOrder.AUTHENTICATION)
-                .build();
+                );
+
+        // NOTE: do not add custom auth filter here for websocket paths; we let the Gateway JwtFilter forward the header
+        return http.build();
     }
 
     @Bean
     public CorsWebFilter corsWebFilter() {
         CorsConfiguration corsConfig = new CorsConfiguration();
-        corsConfig.setAllowedOrigins(List.of(
-                "http://localhost:5173",
-                "http://localhost:5174",
-                "http://localhost:3000"
-        ));
-        corsConfig.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+        // only allow frontends you want
+        corsConfig.setAllowedOrigins(List.of("http://localhost:5174", "http://localhost:5173", "http://localhost:3000"));
+        corsConfig.setAllowedMethods(Arrays.asList("GET","POST","PUT","DELETE","OPTIONS","PATCH"));
         corsConfig.setAllowedHeaders(List.of("*"));
-        corsConfig.setExposedHeaders(List.of("Authorization", "Content-Type"));
         corsConfig.setAllowCredentials(true);
+        corsConfig.setExposedHeaders(List.of(HttpHeaders.AUTHORIZATION, HttpHeaders.CONTENT_TYPE));
         corsConfig.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        // register for everything so /ws/info is covered
         source.registerCorsConfiguration("/**", corsConfig);
-
         return new CorsWebFilter(source);
-    }
-
-    @Bean
-    public RouteLocator websocketRouteLocator(RouteLocatorBuilder builder) {
-        return builder.routes()
-                .route("ws_route", r -> r
-                        .path("/ws/**", "/ws", "/ws/info", "/ws/info/**")
-                        .filters(GatewayFilterSpec::preserveHostHeader)
-                        .uri("lb://communication-service"))
-                .build();
     }
 
 }
